--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
     <br><br><br><br><br>
     <h1 style="font-family: sans-serif; text-align: center;">Happy New Year <br><span style="color: rgb(255, 0, 106);"> 2023 </span></h1>
-    <audio style="border-radius: 5px;" id="music-player" src="./leonell-cassio-chapter-two-ft-carrie-114909.mp3"></audio>
+    <audio autoplay style="border-radius: 5px;" id="music-player" src="./leonell-cassio-chapter-two-ft-carrie-114909.mp3"></audio>
     <br>
     <div style="text-align: center;">
         <div id="music" style="background-color: white;  border-radius: 12px; height: 60px; margin-left: auto; margin-right: auto; text-align: left; padding-left: 5px; padding-right: 5px; display: flex;">
